remove gratuitous wrapping with Numeric classes (pointless since ~ java5),  raw use of newInstance (get more specific exceptions on error), fix other simple warnings